# Ariadne

./: .env.example  .gitignore  HTML学习页参考样例.md  README.md  pyproject.toml  ranking_result.json  requirements.txt  skills-lock.json  start.sh  user_stories_100.json  user_stories_100.md  开发文档.md  接口文档.md  架构文档.md  测试文档.md
docs/: Chat检索与Chunk编辑说明_v1.0.md  Chunk智能修改功能方案_v1.0.md  RAG实施工作报告_v1.0.md  RAG技术框架方案_v1.0.md  本地文件持久化方案_v1.0.md
frontend/: index.html  knowledge.html
frontend/templates/: courseware_shell.html
src/ariadne/: __init__.py  main.py
src/ariadne/api/: __init__.py  facade.py  http_server.py
src/ariadne/application/: config.py  context_compression.py  file_parser.py  knowledge.py  query_rewrite.py  rag_service.py  services.py  text_splitter.py
src/ariadne/domain/: __init__.py  errors.py  models.py
src/ariadne/infrastructure/: __init__.py  app_logger.py  repositories.py  vector_store.py
src/ariadne/llm/: agent.py  embedding_client.py  rerank_client.py
src/prompt/: chat_general.md  chunk_layer.md  chunk_qa.md  explain_layer.md  generate_courseware.md  generate_layer.md  intent_edit_explicit.md  intent_edit_implicit.md  outline_layer.md  rewrite_chunk.md  understand_layer.md
tests/: test_markdown_flow.py  test_pi1.py  test_pi2.py  test_rag.py
